# whisperGF

./: README.md  build-release.sh  lib.build.gradle
src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
src/main/jni/whisper/: CMakeLists.txt  jni.c  jni.cpp
test-app/: .gitignore
test-app/src/main/: AndroidManifest.xml
test-app/src/main/java/com/whispergf/test/: MainActivity.kt
test-app/src/main/res/layout/: activity_main.xml
test-app/src/main/res/values/: arrays.xml  styles.xml
